--- a/backend/src/config/config.json
+++ b/backend/src/config/config.json
@@ -1,8 +1,8 @@
 {
   "APP_PORT": 3000,
   "development": {
-    "username": "exroot",
-    "password": "nevera123",
+    "username": "root",
+    "password": null,
     "database": "getSales",
     "host": "127.0.0.1",
     "dialect": "mysql",
